-Fixed Basic Automated Veinmining incompability, causing infected gemstone blocks to drop themselves instead of their gems when used with instant mining on
-Fixed infected plantera textures not working on servers. Plantera will now change it's variant based on what biome the summoning player is in.
-Fixed infected plantera textures randomly deciding to not load

-Removed config icons due to an issue that occured if certain configs were disabled
-Reverted infected powder changes. They no longer affect walls without tiles.
-Removed unneeded localizations for projectile(s)
-Removed the use of reflection on the compability with SpiritMod's pureglow flowers. It should be more efficient now 

0.7.4.2
=======
-Fixed packets causing a horrifying fps drop. (46 MILLION PACKETS, I really messed up)
-Touched up the pylon of night sprite, now looking less cluttered.
-Removed SpiritMod compability with the 'hallow music in jungle' config.

0.7.4.1
=======
-File organization
-RENAMED EVERY PLACABLE TILE FOR BETTER DISTINGUISMENT. THIS CHANGE WILL RESULT IN ALL PYLON OF NIGHT AND INFECTED SNOW ITEMS IN THE WORLD TO BE CONSIDERED INVALID. MANY APOLOGIES FOR THIS. PLACED VERSIONS OF THESE TILES WON'T BE HARMED.

-Added a config option to customize the brightness of walls when they are highlighted by the biome sight potion.
-Added mod compat with 'Terraria Origins' and 'AltLibrary'
-Added an experimental config option to bring back demon altars spawning in infected blocks, has mod compability
-Added infected variants of moss and gemstone blocks and a config option to disable them respectively
-Added a config header for client
-Added a background color for client-side config
-Added Russian translation. Credit goes to alinahvoshch
-Added custom textures for infected snow trees.
-Added pureglow compability for 'SpiritMod'
-Added journey mode research values for some items
-Added ecto and illuminant coating support for biome sight wall highlighting