@@ -54,7 +54,16 @@ namespace InfectedQualities.Content.Tiles
             return true;
         }
 
-        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 1 : 3;
+        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 3 : 10;
+
+        public override bool CreateDust(int i, int j, ref int type)
+        {
+            if (WorldGen.genRand.NextBool(2))
+            {
+                type = DustID.Mud;
+            }
+            return true;
+        }
 
         public override void RandomUpdate(int i, int j)
         {
