@@ -110,7 +110,7 @@ namespace InfectedQualities.Content.Tiles
             }
         }
 
-        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 1 : 3;
+        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 3 : 10;
 
         public override string Name => infectionType.ToString() + gemType.ToString() + "Gemstone";
 
