@@ -586,18 +586,8 @@ namespace InfectedQualities.Content.Tiles
 
         public override void NumDust(int i, int j, bool fail, ref int num)
         {
-            if (fail)
-            {
-                num = 1;
-            }
-            else if (mossType == MossType.Helium)
-            {
-                num = 5;
-            }
-            else
-            {
-                num = 3;
-            }
+            if(fail) num = 3;
+            else num = mossType > MossType.Purple ? 5 : 10;
         }
 
         public override void KillTile(int i, int j, ref bool fail, ref bool effectOnly, ref bool noItem)
