@@ -65,7 +65,7 @@ namespace InfectedQualities.Content.Tiles
 
         public override bool HasWalkDust() => true;
 
-        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 1 : 3;
+        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 3 : 10;
 
         public override void RandomUpdate(int i, int j) => TileUtilities.DefaultInfectionSpread(i, j, infectionType, TileID.SnowBlock);
 
