@@ -33,7 +33,7 @@ namespace InfectedQualities.Content.Tiles.Plants
             AddMapEntry(new(29, 160, 247), Language.GetText("MapObject.Thorn"));
         }
 
-        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 1 : 3;
+        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 3 : 10;
 
         public override bool IsTileDangerous(int i, int j, Player player) => true;
 
