@@ -37,7 +37,7 @@ namespace InfectedQualities.Content.Tiles.Plants
 
         public override ushort GetMapOption(int i, int j) => (ushort)TileObjectData.GetTileStyle(Main.tile[i, j]);
 
-        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 1 : 3;
+        public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 3 : 10;
 
         public override bool CreateDust(int i, int j, ref int type)
         {
