@@ -13,6 +13,7 @@
 -Fixed Basic Automated Veinmining incompability, causing infected gemstone blocks to drop themselves instead of their gems when used with instant mining on
 -Fixed infected plantera textures not working on servers. Plantera will now change it's variant based on what biome the summoning player is in.
 -Fixed infected plantera textures randomly deciding to not load
+-Fixed incorrect dust values for all tiles
 
 -Removed config icons due to an issue that occured if certain configs were disabled
 -Reverted infected powder changes. They no longer affect walls without tiles.
